--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Depends: R (>= 3.0.0)
 License: MIT
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
 Imports:
+    colorspace,
     ggplot2 (>= 2.2.0),
     ggrepel (>= 0.6.0),
     grid,
@@ -21,3 +21,6 @@ Imports:
     reshape2,
     scales,
     vegan (>= 2.4.0)
+RoxygenNote: 5.0.1
+
+
