--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,8 @@ Title: R Plot Using One-line Function Derived From ggplot2
 Version: 0.1.0
 Author: Walter Xie
 Maintainer: Walter Xie <walter@cs.auckland.ac.nz>
-Description: This package wraps ggplot2’s code into one-line functions, 
-which are easy to use. 
-It also includes some tips and smart code collected from Internet to improve plotting, 
-and few visualisation methods derived from my previous or current works.
-Depends: R (>= 3.0.0)
+Description: This package wraps ggplot2’s code into one-line functions, which are easy to use. It also includes some tips and smart code collected from Internet to improve plotting, and few visualisation methods derived from my previous or current works.
+Depends: R (>= 3.3.1)
 License: MIT
 Encoding: UTF-8
 LazyData: true
