--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,12 +16,14 @@ export(ggHeatmap)
 export(ggHistogram)
 export(ggLineWithPoints)
 export(ggNMDSPlot)
+export(ggPCAPlot)
+export(ggPCoAPlot)
 export(ggPercentageBarChart)
 export(ggScatterPlot)
 export(grid_arrange_shared_legend)
-export(gtClassicalMDSPlot)
 export(gtNMDSPlot)
 export(gtPCAPlot)
+export(gtPCoAPlot)
 export(gtRarefactionCurve)
 export(mylog_trans)
 export(pdf.ggplot)
