--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Description: This package wraps ggplot2’s code into one-line functions, which
     are easy to use. It also includes some tips and smart code collected from
     Internet to improve plotting, and few visualisation methods derived from my
     previous or current works.
+URL: http://github.com/walterxie/gg1L
+BugReports: http://github.com/walterxie/gg1L/issues
 Depends:
     R (>= 3.3.1)
 License: MIT
