mv random2Clusters here

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(mylog_trans)
 export(pdf.ggplot)
 export(pdf.gtable)
 export(pdf.plot)
+export(random2Clusters)
 export(scientific_10)
 export(summarySE)
 export(unclip.ggplot)
