--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ import(ggrepel)
 import(grDevices)
 import(grid)
 import(gridExtra)
+import(methods)
 import(plyr)
 import(reshape2)
 import(scales)
