rename to plotgt to avoid generic/method consistency issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ export(mylog_trans)
 export(pdf.ggplot)
 export(pdf.gtable)
 export(pdf.plot)
-export(plot.gtable)
+export(plotgt)
 export(random2Clusters)
 export(scientific_10)
 export(summarySE)
