--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ URL: http://github.com/walterxie/gg1L
 BugReports: http://github.com/walterxie/gg1L/issues
 Depends:
     R (>= 3.3.1)
-License: MIT + file LICENSE
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Imports:
