export some base functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,19 @@ export(ggDensityEstimate)
 export(ggGroupAbundanceBar)
 export(ggHeatmap)
 export(ggHistogram)
+export(ggInit)
+export(ggLabTitle)
 export(ggLineWithPoints)
 export(ggNMDSPlot)
+export(ggOptCoordCartesian)
+export(ggOptPalette)
+export(ggOptScaleAxis)
 export(ggPCAPlot)
 export(ggPCoAPlot)
 export(ggPercentageBarChart)
 export(ggScatterPlot)
+export(ggThemeOthers)
+export(ggThemePanelBorder)
 export(ggYAcrossXBar)
 export(grid_arrange_shared_legend)
 export(gtNMDSPlot)
