add doc for more basic functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(ggLabTitle)
 export(ggLineWithPoints)
 export(ggNMDSPlot)
 export(ggOptCoordCartesian)
+export(ggOptFacetGrid)
+export(ggOptLegend)
 export(ggOptPalette)
 export(ggOptScaleAxis)
 export(ggPCAPlot)
